<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minha Parte Na conta</string>
    <string name="title_section0">Nova conta</string>
    <string name="title_section1">Produtos consumidos</string>
    <string name="title_section2">Pessoas na mesa</string>
    <string name="title_section3">Minha parte</string>
    <string name="title_section4">Creditos</string>
    <string name="title_section5">Teste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_fulllist">Descritivo de contas</string>
    <string name="action_settings">Settings</string>



    <string name="title_activity_new_bar_account_data_entry">NewBarAccountDataEntryActivity</string>
    <string name="title_activity_register_people">Registro de pessoas</string>

    <string name="title_activity_register_product">Registro de produtos</string>
    <string name="title_activity_start_new_bar_account">Minha parte na conta</string>
    <string name="newBarAccount">Nova conta de bar</string>
    <string name="continuePreviousAccount">Continuar conta existente</string>
    <string name="title_activity_checkout">Resumo da conta</string>
    <string name="addNewPerson">Adicionar pessoa</string>
    <string name="deletePerson">Apagar pessoa</string>
    <string name="doneRegistering">Terminei! Próximo passo.</string>
    <string name="AddNewProduct">Adiciona novo produto</string>
    <string name="DeleteProduct">Remove produto</string>
    <string name="GoCheckout">Feito! Calcular conta!</string>
    <string name="copyProduct">Copiar Produto</string>
    <string name="Consumiu">Consumiu</string>
    <string name="name">Nome:</string>
    <string name="price">Preço:</string>
    <string name="Delete">Apagar</string>
    <string name="AppTitle">Minha parte na conta</string>
    <string name="AppDesc">Calcula a parte de cada um na conta do bar ou restaurante</string>
    <string name="title_activity_show_credits">Sobre este App</string>
    <string name="CreditsDaniel">Daniel Monteiro - Código e Fotos</string>
    <string name="CreditsLivia">Livia Valle - Arte e layout</string>
    <string name="About">Sobre este App...</string>
    <string name="Cerveja">A cervejinha estava muito boa...</string>
    <string name="title_activity_show_final_checkout">Consolidado da conta</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
