<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".StartNewBarAccount" >

<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/fundo_novoproduto" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

			<Spinner android:id="@+id/spnProducts" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="5dp"
			    android:background="#77ffffff"
			    android:paddingTop="5dp" >

			    <TextView
			        android:id="@+id/textView1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/name"
			        android:textAppearance="?android:attr/textAppearanceMedium" />

			    <EditText
			        android:id="@+id/edtProduct"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight="0.28"
			        android:ems="10"
			        android:inputType="textCapWords|textAutoComplete" >

			        <requestFocus />

			    </EditText>

			</LinearLayout>

			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="5dp"
			    android:background="#77ffffff"
			    android:paddingBottom="5dp" >

				<TextView
				    android:id="@+id/textView2"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/price"
				    android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
				    android:id="@+id/edtCost"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:ems="10"
				    android:inputType="number|numberSigned|numberDecimal" >
				</EditText>

			</LinearLayout>

			<Button android:id="@+id/btnAddProduct" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/AddNewProduct" />

			<Button android:id="@+id/btnDeleteProduct"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/DeleteProduct" />

			<Button android:id="@+id/btnCopy" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/copyProduct" />

</LinearLayout>


</ScrollView>
</RelativeLayout>