<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartNewBarAccount"
    >

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <Spinner
        android:id="@+id/spnPerson"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#77FFFFFF"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords|textAutoCorrect|textPersonName" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddPerson"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewPerson" />

    <Button
        android:id="@+id/btnDeletePerson"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/deletePerson" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

</LinearLayout>
</ScrollView>
    <ImageButton
        android:id="@+id/add_person_fab"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:tint="@android:color/white"
        android:background="@drawable/fab"
        android:elevation="20dp"
        android:src="@android:drawable/ic_input_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>